--- a/seedb.html
+++ b/seedb.html
@@ -120,7 +120,7 @@ body {
     function checkApproval() {
         let approvedPage = localStorage.getItem("approvedPage");
 
-        if (approvedPage === "seed.html") {
+        if (approvedPage === "seedb.html") {
             alert("Your request has been approved! Redirecting to seed Package...");
             localStorage.removeItem("approvedPage"); // ✅ منظور ٿيل درخواست کي ختم ڪريو
             window.location.href = "seed.html";
